--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 rvm:
  - 2.2.2
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec
+  - bundle exec cucumber
+after_script:
+  - bundle exec rake send_to_codeclimate 
